---------------------------------------------------------------------------
Version 5.7.6  [V5-BETA] (rgerhards), 2011-02-??
- bugfix: memory leak when $RepeatedMsgReduction on was used
  bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=225
---------------------------------------------------------------------------
Version 5.7.5  [V5-BETA] (rgerhards), 2011-02-23
- enhance: imfile did not yet support multiple rulesets, now added
  we do this directly in the beta because a) it does not affect existing
  functionality and b) one may argue that this missing functionality is
  close to a bug.
- improved testbench, added tests for imuxsock
- bugfix: imuxsock did no longer sanitize received messages
  This was a regression from the imuxsock partial rewrite. Happened
  because the message is no longer run through the standard parsers. 
  bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=224
- bugfix: minor race condition in action.c - considered cosmetic
  This is considered cosmetic as multiple threads tried to write exactly
  the same value into the same memory location without sync. The method
  has been changed so this can no longer happen.
---------------------------------------------------------------------------
Version 5.7.4  [V5-BETA] (rgerhards), 2011-02-17
- added pmsnare parser module (written by David Lang)
- enhanced imfile to support non-cancel input termination
- improved systemd socket activation thanks to Marius Tomaschweski
- improved error reporting for $WorkDirectory
  non-existance and other detectable problems are now reported,
  and the work directory is NOT set in this case
- bugfix: pmsnare causded abort under some conditions
- bugfix: abort if imfile reads file line of more than 64KiB
  Thanks to Peter Eisentraut for reporting and analysing this problem.
  bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=221
- bugfix: queue engine did not properly slow down inputs in FULL_DELAY mode